[SLACDP22-433] Fix grey-white section missing padding when it's the first section used

--- a/source/02-layouts/section/_section.scss
+++ b/source/02-layouts/section/_section.scss
@@ -149,10 +149,6 @@
         .l-section--gray
       )
   ) {
-  &:first-of-type {
-    padding-top: 0;
-  }
-
   + :is(
       .l-section--white,
       .l-section:not(
@@ -169,11 +165,30 @@
   }
 
   @include breakpoint-min(gesso-breakpoint(desktop)) {
-    &:first-of-type {
+    & + & {
       padding-top: 0;
     }
+  }
+}
 
-    & + & {
+:is(
+    .l-section--white,
+    .l-section:not(
+        .l-section--purple-black,
+        .l-section--blue-green,
+        .l-section--yellow,
+        .l-section--purple,
+        .l-section--blue,
+        .l-section--gray-white,
+        .l-section--gray
+      )
+  ) {
+  &:first-of-type {
+    padding-top: 0;
+  }
+
+  @include breakpoint-min(gesso-breakpoint(desktop)) {
+    &:first-of-type {
       padding-top: 0;
     }
   }
